fixed overlapping elements

--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -7,4 +7,5 @@
     width: 100%;
     padding: 0.4rem;
     text-align: center;
+    z-index: 1000;
 }
